--- a/url_shortener/templates/base.html
+++ b/url_shortener/templates/base.html
@@ -6,13 +6,16 @@
     <title>{% block title %}The Site{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/62ce21f0ac.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    {% block js %}
+    {% endblock %}
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg bg-primary flex-lg-nowrap">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/"><i class="fa-solid fa-house"></i>&nbsp;Home</a>
-          <a class="btn btn-info float-end" href="/api" role="button"><i class="fa-solid fa-code"></i></a>
+          <a class="navbar-brand" href="/urls/"><i class="fa-solid fa-house"></i>&nbsp;Home</a>
+          <a class="btn btn-info float-end" href="/urls/stats/" role="button"><i class="fa-solid fa-chart-column"></i>&nbsp;URL Stats</a>
         </div>
       </nav>
     </header>
@@ -20,8 +23,6 @@
       {% block content %}
       {% endblock %}
     </div>
-    {% block js %}
-    {% endblock %}
   </body>
   <footer class="fixed-bottom bg-dark">
     <div class="container">
@@ -30,5 +31,4 @@
       </div>
     </div>
   </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </html>
